# displaz

./: .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  LICENSE.txt  README.md  README.rst  appveyor.yml  argparse.cpp  config.h.in.cmake  dragspinbox.h  glutil.cpp  index.html  interactivecamera.h  main.cpp  mainwindow.cpp  mainwindow.h  mesh.cpp  mesh.h  params.json  pointarray.cpp  pointarray.h  pointio.cpp  points.glsl  points_f.glsl  points_v.glsl  ptview.cpp  ptview.h  qtlasview.rc  resources.qrc  shader.cpp  shader.h  shadereditor.cpp  tinyformat.h  util.h  windows_resources.rc
bindings/c/: displaz.c  example.c
bindings/cpp/: displaz.h  example.cpp
bindings/julia/: Displaz.jl  Displaz.jl~  example.jl
bindings/matlab/: dclf.m  dhold.m  dplot.m  get_dcursor_pos.m
bindings/python/: displaz.py  example.py
cmake/: DeployQt5.cmake  FindGLEW.cmake  FindIlmbase.cmake  FindImath.cmake  FindLASlib.cmake  FindPDAL.cmake  GitUtils.cmake
doc/: userguide.md  userguide.rst
doc/examples/: extractor.py
docker/: README.md
docker/debian_bookworm/: Dockerfile
docker/debian_bullseye/: Dockerfile
docker/debian_buster/: Dockerfile
docker/debian_stretch/: Dockerfile
docker/debian_trixie/: Dockerfile
docker/fedora_32/: Dockerfile
docker/fedora_33/: Dockerfile
docker/fedora_34/: Dockerfile
docker/fedora_35/: Dockerfile
docker/fedora_36/: Dockerfile
docker/fedora_37/: Dockerfile
docker/fedora_38/: Dockerfile
docker/fedora_39/: Dockerfile
docker/fedora_40/: Dockerfile
docker/fedora_41/: Dockerfile
docker/fedora_42/: Dockerfile
docker/fedora_43/: Dockerfile
docker/ubuntu_16_04/: Dockerfile
docker/ubuntu_18_04/: Dockerfile
docker/ubuntu_20_04/: Dockerfile
docker/ubuntu_22_04/: Dockerfile
docker/ubuntu_24_04/: Dockerfile
docker/ubuntu_26_04/: Dockerfile
package/: FileAssoc.nsh  NSIS.InstallOptions.ini.in  displaz.icns  make_icon.sh  resources.qrc
rply/: cube_tri.ply  rply.c  rply.h
shaders/: annotation.glsl  axes_label.glsl  axes_lines.glsl  axes_quad.glsl  billboard.glsl  bounding_box.glsl  cursor.glsl  cylindrical_proj.glsl  distance.glsl  generic_points.glsl  grid.glsl  las_points.glsl  las_points_lod.glsl  las_points_selection.glsl  lod_debug.glsl  meshedge.glsl  meshface.glsl  point_normals.glsl  point_vectors.glsl  points_default.glsl  rainbow.glsl  selection_sphere.glsl  simple_example.glsl
src/: CMakeLists.txt  ClipBox.h  DrawCostModel.cpp  DrawCostModel.h  HookFormatter.cpp  HookFormatter.h  HookManager.cpp  HookManager.h  InterProcessLock.cpp  InterProcessLock.h  InterProcessLock_test.cpp  InterProcessLock_test.sh  IpcChannel.cpp  IpcChannel.h  IpcEventDispatcher.cpp  IpcEventDispatcher.h  PolygonBuilder.cpp  PolygonBuilder.h  config.h.in.cmake  corecontext.h  coreprofileattr.mm  datasetui.cpp  datasetui.h  displazserver.h  dragspinbox.h  dvox.cpp  fileloader.h  geometry.cpp  geometry.h  geometrycollection.cpp  geometrycollection.h  geomfield.cpp  geomfield.h  glutil.cpp  glutil.h  guimain.cpp  hcloud.cpp  hcloud.h  hcloudview.cpp  hcloudview.h  (+50 more)
src/gui/: DataSetListView.cpp  DataSetListView.h  DataSetUI.cpp  DataSetUI.h  DragSpinBox.h  GLSLHighlighter.cpp  GLSLHighlighter.h  InteractiveCamera.h  MainWindow.cpp  MainWindow.h  PointViewerMainWindow.cpp  PointViewerMainWindow.h  QtLogger.cpp  QtLogger.h  ShaderEditor.cpp  ShaderEditor.h  datasetui.h  guimain.cpp  guimain.h  interactivecamera.h
src/render/: Annotation.cpp  Annotation.h  Billboard.cpp  Billboard.h  ClipBox.h  FrameRate.cpp  FrameRate.h  GeomField.cpp  GeomField.h  Geometry.cpp  Geometry.h  GeometryMutator.cpp  GeometryMutator.h  HCloudView.cpp  HCloudView.h  OctreeNode.h  PointArray.cpp  PointArray.h  Shader.cpp  TransformState.cpp  TransformState.h  TriMesh.cpp  TriMesh.h  View3D.cpp  View3D.h  geometry.cpp  gldebug.cpp  gldebug.h  glutil.cpp  glutil.h  hcloudview.h  shader.cpp
src/resource/: axes.xcf  xyz.xcf
src/shader/: Enable.cpp  Enable.h  Shader.cpp  Shader.h  ShaderParam.h  ShaderProgram.cpp  ShaderProgram.h
test/: DrawBBox.py  bad_mesh_indices.ply  color_lines.ply  displaz_ply_points.ply  grid.jl  grid.ply  hole.ply  polygon_2d.ply  polygon_explicitly-closed.ply  polygon_explicitly_closed.ply  polygon_holes.ply  polygon_oriented_complex.ply  polygon_simple.ply  polygons.ply  single_point.ply  standard_ply_points.ply  testhook_draw_polygons.sh  tetrahedra.ply  textured.ply  triangles.ply
test/data/: circle_points.ply  color_lines.ply  displaz_native_points.ply  hole.ply  triangles.ply
